kubernetes/app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: night-owl
spec:
  selector:
    app: night_owl
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
